--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "toastr": "^2.1.4"
+        "chart.js": "^2.9.3",
+        "jquery-validation": "^1.19.1",
+        "toastr": "^2.1.4",
+        "vue-tables-2": "^2.0.14"
     }
 }
