--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "milon/barcode": "^7.0",
-        "spatie/laravel-permission": "^3.11"
+        "spatie/laravel-permission": "^3.11",
+        "stripe/stripe-php": "^7.28"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
